@@ -2130,6 +2130,10 @@ progress.window.msg.filemove=Please wait while the file move/rename completes
 
 ConfigView.label.popup.timestamp=Add timestamps to popup alerts
 ConfigView.label.popup.autohide=Automatically hide non-error popup alerts after x seconds (set to 0 to disable auto hiding)
+ConfigView.label.popup.suppress_alerts=Suppress alerts
+ConfigView.label.popup.use_message_boxes=Use popup message boxes rather than the standard popup alert box.
+ConfigView.label.popup.show=Show all popup alerts logged so far (if any)
+ConfigView.label.popup.show.button=Show
 
 ConfigView.label.please.visit.here=Please visit here for details
 ConfigView.section.ipfilter.enable.descriptionCache=Store IP descriptions in scratch file
